Edit Data Files

--- a/models/processing/USA/Distancing.ipynb
+++ b/models/processing/USA/Distancing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -107,14 +107,14 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1001</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>19.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>737504.0</td>\n",
+       "      <td>737497.0</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737503.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737495.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -126,14 +126,14 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1003</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>19.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>737504.0</td>\n",
+       "      <td>737497.0</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737503.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737495.0</td>\n",
        "      <td>0.3</td>\n",
        "      <td>0.1</td>\n",
        "      <td>2691</td>\n",
@@ -145,14 +145,14 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1005</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>19.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>737504.0</td>\n",
+       "      <td>737497.0</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737503.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737495.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -164,14 +164,14 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1007</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>19.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>737504.0</td>\n",
+       "      <td>737497.0</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737503.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737495.0</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>279</td>\n",
@@ -183,14 +183,14 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1009</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>19.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>737504.0</td>\n",
+       "      <td>737497.0</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737503.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>737500.0</td>\n",
+       "      <td>737495.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -205,25 +205,25 @@
       ],
       "text/plain": [
        "   FIPS  stay at home  >50 gatherings  >500 gatherings  public schools  \\\n",
-       "0  1001          20.0            13.0             16.0            19.0   \n",
-       "1  1003          20.0            13.0             16.0            19.0   \n",
-       "2  1005          20.0            13.0             16.0            19.0   \n",
-       "3  1007          20.0            13.0             16.0            19.0   \n",
-       "4  1009          20.0            13.0             16.0            19.0   \n",
+       "0  1001           NaN        737504.0         737497.0        737500.0   \n",
+       "1  1003           NaN        737504.0         737497.0        737500.0   \n",
+       "2  1005           NaN        737504.0         737497.0        737500.0   \n",
+       "3  1007           NaN        737504.0         737497.0        737500.0   \n",
+       "4  1009           NaN        737504.0         737497.0        737500.0   \n",
        "\n",
        "   restaurant dine-in  entertainment/gym  federal guidelines  \\\n",
-       "0                 NaN               16.0                11.0   \n",
-       "1                 NaN               16.0                11.0   \n",
-       "2                 NaN               16.0                11.0   \n",
-       "3                 NaN               16.0                11.0   \n",
-       "4                 NaN               16.0                11.0   \n",
+       "0            737503.0                NaN            737500.0   \n",
+       "1            737503.0                NaN            737500.0   \n",
+       "2            737503.0                NaN            737500.0   \n",
+       "3            737503.0                NaN            737500.0   \n",
+       "4            737503.0                NaN            737500.0   \n",
        "\n",
        "   foreign travel ban  Score  TCI+  Jobs+  Trips/Week+  Routes  Transit Shed  \\\n",
-       "0                 NaN    0.0   0.0      0            0       0             0   \n",
-       "1                 NaN    0.3   0.1   2691           14       1             1   \n",
-       "2                 NaN    0.0   0.0      0            0       0             0   \n",
-       "3                 NaN    0.1   0.0    279            2       0             0   \n",
-       "4                 NaN    0.0   0.0      0            0       0             0   \n",
+       "0            737495.0    0.0   0.0      0            0       0             0   \n",
+       "1            737495.0    0.3   0.1   2691           14       1             1   \n",
+       "2            737495.0    0.0   0.0      0            0       0             0   \n",
+       "3            737495.0    0.1   0.0    279            2       0             0   \n",
+       "4            737495.0    0.0   0.0      0            0       0             0   \n",
        "\n",
        "   Transit  \n",
        "0        0  \n",
@@ -233,7 +233,7 @@
        "4        0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "4          NaN  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
