--- a/models/processing/USA/County_Demographics.ipynb
+++ b/models/processing/USA/County_Demographics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +114,12 @@
     "\n",
     "\n",
     "#Joining Compiled Data with Racial/Age Data (This is incomplete, not all FIPS included)\n",
-    "Demographics_Full = pd.merge(Pop_Unemp_Area_Educ, Houses_Age_Ethnic, left_on='FIPS', right_on='FIPS')"
+    "Demographics_Full = pd.merge(Pop_Unemp_Area_Educ, Age_Race, left_on='FIPS', right_on='FIPS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 597,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        " ('Prop_Blue', 2016)]"
       ]
      },
-     "execution_count": 598,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
        "[5 rows x 110 columns]"
       ]
      },
-     "execution_count": 599,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        " 'Total housing units']"
       ]
      },
-     "execution_count": 600,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -913,25 +913,25 @@
      "output_type": "stream",
      "text": [
       "Educ_Area: 3219\n",
-      "Educ_Area_Unemp: 3139\n",
-      "Educ_Area_Unemp_Pop: 3140\n",
-      "Educ_Area_Unemp_Pop_Pov: 3134\n",
-      "Educ_Area_Unemp_Pop_Pov_Votes: 3114\n",
+      "Educ_Area_Pop: 3140\n",
+      "Educ_Area_Pop_Unemp: 3139\n",
+      "Educ_Area_Pop_Unemp_Pov: 3134\n",
+      "Educ_Area_Pop_Unemp_Pov_Votes: 3114\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print('Educ_Area: ' + str(len(Educ_Area)))\n",
-    "print('Educ_Area_Unemp: ' + str(len(Educ_Area_Unemp)))\n",
-    "print('Educ_Area_Unemp_Pop: ' + str(len(Educ_Area_Unemp_Pop)))\n",
-    "print('Educ_Area_Unemp_Pop_Pov: ' + str(len(Educ_Area_Unemp_Pop_Pov)))\n",
-    "print('Educ_Area_Unemp_Pop_Pov_Votes: ' + str(len(Educ_Area_Unemp_Pop_Pov_Votes)) + '\\n')"
+    "print('Educ_Area_Pop: ' + str(len(Educ_Area_Pop)))\n",
+    "print('Educ_Area_Pop_Unemp: ' + str(len(Educ_Area_Pop_Unemp)))\n",
+    "print('Educ_Area_Pop_Unemp_Pov: ' + str(len(Educ_Area_Pop_Unemp_Pov)))\n",
+    "print('Educ_Area_Pop_Unemp_Pov_Votes: ' + str(len(Educ_Area_Pop_Unemp_Pov_Votes)) + '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
        "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 603,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
