More Data Preprocessing
Added more info and layers to USA data processing

--- a/models/processing/USA/Cali_Based/Health_Cali.ipynb
+++ b/models/processing/USA/Cali_Based/Health_Cali.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,289 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "County_Beds = pd.read_csv('../../../data/us/hospitals/beds_by_county.csv', encoding='latin1')\n",
-    "County_ICU = pd.read_csv('../../../data/us/hospitals/icu_county.csv', encoding='latin1')\n",
-    "Cali_Data = pd.read_csv('../../../data/us/hospitals/ca_county_hospital_statistics.csv', encoding='latin1')\n",
-    "\n",
-    "#State Bed Density (per 1000 people)\n",
-    "State_Pop = pd.read_csv('../../../data/us/demographics/state_populations.csv', encoding='latin1')\n",
-    "State_Bed = pd.read_csv('../../../data/us/hospitals/bed_densities.csv', encoding='latin1')\n",
-    "State_Bed.columns = State_Bed.columns.str.replace('bedspermille', 'bedsper1000')"
+    "Cali_Data = pd.read_csv('../../../../data/us/hospitals/ca_county_hospital_statistics.csv', encoding='latin1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Merging Hospital Data with ICU Data\n",
-    "County_Health = County_ICU.join(County_Beds.set_index('FIPS'), on='FIPS', lsuffix='_left', rsuffix='_right')\n",
-    "#Cleaning Merged Dataset\n",
-    "County_Health.columns = County_Health.columns.str.replace('icu_beds_left', 'icu_beds_Post')\n",
-    "County_Health.columns = County_Health.columns.str.replace('icu_beds_right', 'icu_beds_Pre')\n",
-    "County_Health = County_Health.drop(columns = ['Name'])\n",
-    "County_Health = County_Health[['FIPS','state','county','hospitals','staffed_beds','licensed_beds','icu_beds_Pre','icu_beds_Post']]\n",
-    "\n",
-    "County_Health = County_Health.sort_values(by=['FIPS'])\n",
-    "County_Health.to_csv('County_Health.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FIPS</th>\n",
-       "      <th>state</th>\n",
-       "      <th>county</th>\n",
-       "      <th>hospitals</th>\n",
-       "      <th>staffed_beds</th>\n",
-       "      <th>licensed_beds</th>\n",
-       "      <th>icu_beds_Pre</th>\n",
-       "      <th>icu_beds_Post</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Autauga</td>\n",
-       "      <td>1</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Baldwin</td>\n",
-       "      <td>3</td>\n",
-       "      <td>362.0</td>\n",
-       "      <td>410.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1005</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Barbour</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1007</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Bibb</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1009</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Blount</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   FIPS state   county  hospitals  staffed_beds  licensed_beds  icu_beds_Pre  \\\n",
-       "0  1001    AL  Autauga          1          55.0           85.0           6.0   \n",
-       "1  1003    AL  Baldwin          3         362.0          410.0          44.0   \n",
-       "2  1005    AL  Barbour          1          30.0           74.0           5.0   \n",
-       "3  1007    AL     Bibb          1          25.0           35.0           0.0   \n",
-       "4  1009    AL   Blount          1          25.0           40.0           6.0   \n",
-       "\n",
-       "   icu_beds_Post  \n",
-       "0              6  \n",
-       "1             51  \n",
-       "2              5  \n",
-       "3              0  \n",
-       "4              6  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "County_Health.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "County_ICU: 3142\n",
-      "County_Beds: 2512\n",
-      "County_Health: 3143\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('County_ICU: ' + str(len(County_ICU)))\n",
-    "print('County_Beds: ' + str(len(County_Beds)))\n",
-    "print('County_Health: ' + str(len(County_Health)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Cleaning State Bed Dataset\n",
-    "State_Bed = pd.merge(State_Bed, State_Pop, left_on='state', right_on='state')\n",
-    "State_Bed = State_Bed.drop(columns = ['country_x', 'country_y'])\n",
-    "\n",
-    "State_Bed.insert(3, \"Approx_Beds\", State_Bed.bedsper1000*State_Bed.population/1000, True)\n",
-    "State_Bed = State_Bed.round(0)\n",
-    "State_Bed = State_Bed[['state','population','bedsper1000','Approx_Beds']]\n",
-    "State_Bed.to_csv('State_Bed.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>population</th>\n",
-       "      <th>bedsper1000</th>\n",
-       "      <th>Approx_Beds</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>4903185</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>15200.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>731545</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1609.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>7278717</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>13830.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AR</td>\n",
-       "      <td>3017825</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>9657.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>39512223</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>71122.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  state  population  bedsper1000  Approx_Beds\n",
-       "0    AL     4903185          3.0      15200.0\n",
-       "1    AK      731545          2.0       1609.0\n",
-       "2    AZ     7278717          2.0      13830.0\n",
-       "3    AR     3017825          3.0       9657.0\n",
-       "4    CA    39512223          2.0      71122.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "State_Bed.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +258,7 @@
        "4                                                 No  6013  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
