--- a/models/processing/USA/Older_Versions/Distancing.ipynb
+++ b/models/processing/USA/Older_Versions/Distancing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "Air_Traffic = pd.read_csv('../../../data/us/other/air_traffic.csv', encoding='latin1')\n",
     "Policies = pd.read_csv('../../../data/us/other/policies.csv', encoding='latin1')\n",
     "Transit = pd.read_csv('../../../data/us/other/transit.csv', encoding='latin1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Policies_State = Policies[Policies.FIPS%1000 == 0]\n",
+    "Policies_County = Policies[Policies.FIPS%1000 != 0]"
    ]
   },
   {
@@ -455,13 +465,6 @@
    "source": [
     "Air_Traffic.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
