Major Data Update
Most of the US datasets have been fully processed, look under County-Based, and look in the merged file to see every data file processed

--- a/models/processing/USA/County_Based/Policy_Traffic_County.ipynb
+++ b/models/processing/USA/County_Based/Policy_Traffic_County.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,25 +33,26 @@
     "Policies_County = Policies[Policies.FIPS%1000 != 0]\n",
     "#Removing extra columns\n",
     "Policies_County = Policies_County.drop(columns = ['STATE', 'AREA_NAME'])\n",
-    "\n",
+    "Policies_County = Policies_County.set_index('FIPS')\n",
     "Policies_County.to_csv('Policies_County.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Separating only cleaning Transit Data\n",
     "Transit = Transit.sort_values(by=['FIPS'])\n",
     "Transit = Transit.drop(columns = ['Name', 'Population'])\n",
+    "Transit = Transit.set_index('FIPS')\n",
     "Transit.to_csv('Transit.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>FIPS</th>\n",
        "      <th>stay at home</th>\n",
        "      <th>&gt;50 gatherings</th>\n",
        "      <th>&gt;500 gatherings</th>\n",
@@ -121,11 +121,21 @@
        "      <th>federal guidelines</th>\n",
        "      <th>foreign travel ban</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FIPS</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1001</td>\n",
+       "      <th>1001</th>\n",
        "      <td>NaN</td>\n",
        "      <td>737504.0</td>\n",
        "      <td>737497.0</td>\n",
@@ -136,8 +146,7 @@
        "      <td>737495.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1003</td>\n",
+       "      <th>1003</th>\n",
        "      <td>NaN</td>\n",
        "      <td>737504.0</td>\n",
        "      <td>737497.0</td>\n",
@@ -148,8 +157,7 @@
        "      <td>737495.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1005</td>\n",
+       "      <th>1005</th>\n",
        "      <td>NaN</td>\n",
        "      <td>737504.0</td>\n",
        "      <td>737497.0</td>\n",
@@ -160,8 +168,7 @@
        "      <td>737495.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1007</td>\n",
+       "      <th>1007</th>\n",
        "      <td>NaN</td>\n",
        "      <td>737504.0</td>\n",
        "      <td>737497.0</td>\n",
@@ -172,8 +179,7 @@
        "      <td>737495.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1009</td>\n",
+       "      <th>1009</th>\n",
        "      <td>NaN</td>\n",
        "      <td>737504.0</td>\n",
        "      <td>737497.0</td>\n",
@@ -188,29 +194,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   FIPS  stay at home  >50 gatherings  >500 gatherings  public schools  \\\n",
-       "2  1001           NaN        737504.0         737497.0        737500.0   \n",
-       "3  1003           NaN        737504.0         737497.0        737500.0   \n",
-       "4  1005           NaN        737504.0         737497.0        737500.0   \n",
-       "5  1007           NaN        737504.0         737497.0        737500.0   \n",
-       "6  1009           NaN        737504.0         737497.0        737500.0   \n",
+       "      stay at home  >50 gatherings  >500 gatherings  public schools  \\\n",
+       "FIPS                                                                  \n",
+       "1001           NaN        737504.0         737497.0        737500.0   \n",
+       "1003           NaN        737504.0         737497.0        737500.0   \n",
+       "1005           NaN        737504.0         737497.0        737500.0   \n",
+       "1007           NaN        737504.0         737497.0        737500.0   \n",
+       "1009           NaN        737504.0         737497.0        737500.0   \n",
        "\n",
-       "   restaurant dine-in  entertainment/gym  federal guidelines  \\\n",
-       "2            737503.0                NaN            737500.0   \n",
-       "3            737503.0                NaN            737500.0   \n",
-       "4            737503.0                NaN            737500.0   \n",
-       "5            737503.0                NaN            737500.0   \n",
-       "6            737503.0                NaN            737500.0   \n",
+       "      restaurant dine-in  entertainment/gym  federal guidelines  \\\n",
+       "FIPS                                                              \n",
+       "1001            737503.0                NaN            737500.0   \n",
+       "1003            737503.0                NaN            737500.0   \n",
+       "1005            737503.0                NaN            737500.0   \n",
+       "1007            737503.0                NaN            737500.0   \n",
+       "1009            737503.0                NaN            737500.0   \n",
        "\n",
-       "   foreign travel ban  \n",
-       "2            737495.0  \n",
-       "3            737495.0  \n",
-       "4            737495.0  \n",
-       "5            737495.0  \n",
-       "6            737495.0  "
+       "      foreign travel ban  \n",
+       "FIPS                      \n",
+       "1001            737495.0  \n",
+       "1003            737495.0  \n",
+       "1005            737495.0  \n",
+       "1007            737495.0  \n",
+       "1009            737495.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -252,12 +261,21 @@
        "      <th>Routes</th>\n",
        "      <th>Transit Shed</th>\n",
        "      <th>Transit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>FIPS</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2106</th>\n",
+       "      <th>1001</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -265,10 +283,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>799</th>\n",
+       "      <th>1003</th>\n",
        "      <td>0.3</td>\n",
        "      <td>0.1</td>\n",
        "      <td>2691</td>\n",
@@ -276,10 +293,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2121</th>\n",
+       "      <th>1005</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -287,10 +303,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1009</th>\n",
+       "      <th>1007</th>\n",
        "      <td>0.1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>279</td>\n",
@@ -298,10 +313,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2178</th>\n",
+       "      <th>1009</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
@@ -309,22 +323,22 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1009</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Score  TCI+  Jobs+  Trips/Week+  Routes  Transit Shed  Transit  FIPS\n",
-       "2106    0.0   0.0      0            0       0             0        0  1001\n",
-       "799     0.3   0.1   2691           14       1             1        0  1003\n",
-       "2121    0.0   0.0      0            0       0             0        0  1005\n",
-       "1009    0.1   0.0    279            2       0             0        0  1007\n",
-       "2178    0.0   0.0      0            0       0             0        0  1009"
+       "      Score  TCI+  Jobs+  Trips/Week+  Routes  Transit Shed  Transit\n",
+       "FIPS                                                                \n",
+       "1001    0.0   0.0      0            0       0             0        0\n",
+       "1003    0.3   0.1   2691           14       1             1        0\n",
+       "1005    0.0   0.0      0            0       0             0        0\n",
+       "1007    0.1   0.0    279            2       0             0        0\n",
+       "1009    0.0   0.0      0            0       0             0        0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
