--- a/models/processing/USA/County_Based/Health_County.ipynb
+++ b/models/processing/USA/County_Based/Health_County.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,31 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Cleaning beds Data\n",
     "County_Beds = County_Beds.sort_values(by=['FIPS'])\n",
-    "County_Beds = County_Beds.drop(columns=['state', 'county', 'Name']) \n",
     "#Dropping unecessary columns\n",
-    "County_Beds.to_csv('County_Beds.csv')"
+    "County_Beds = County_Beds.drop(columns=['state', 'county', 'Name']) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Cleaning icu Data\n",
-    "County_ICU = County_ICU.sort_values(by=['FIPS'])\n",
-    "County_ICU.to_csv('County_ICU.csv')"
+    "County_ICU = County_ICU.sort_values(by=['FIPS'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,13 +58,28 @@
     "County_Health = County_Health[County_Health.staffed_beds >= -1]\n",
     "\n",
     "County_Health = County_Health.sort_values(by=['FIPS'])\n",
+    "County_Health = County_Health.set_index('FIPS')\n",
     "\n",
     "County_Health.to_csv('County_Health.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Setting FIPS to main index\n",
+    "County_Beds = County_Beds.set_index('FIPS')\n",
+    "County_Beds.to_csv('County_Beds.csv')\n",
+    "\n",
+    "County_ICU = County_ICU.set_index('FIPS')\n",
+    "County_ICU.to_csv('County_ICU.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -114,59 +127,60 @@
        "      <th>staffed_beds</th>\n",
        "      <th>licensed_beds</th>\n",
        "      <th>icu_beds</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>FIPS</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>1001</th>\n",
        "      <td>55</td>\n",
        "      <td>85</td>\n",
        "      <td>6</td>\n",
-       "      <td>1001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>1003</th>\n",
        "      <td>362</td>\n",
        "      <td>410</td>\n",
        "      <td>44</td>\n",
-       "      <td>1003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>1005</th>\n",
        "      <td>30</td>\n",
        "      <td>74</td>\n",
        "      <td>5</td>\n",
-       "      <td>1005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>1007</th>\n",
        "      <td>25</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
-       "      <td>1007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>1009</th>\n",
        "      <td>25</td>\n",
        "      <td>40</td>\n",
        "      <td>6</td>\n",
-       "      <td>1009</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    staffed_beds  licensed_beds  icu_beds  FIPS\n",
-       "16            55             85         6  1001\n",
-       "17           362            410        44  1003\n",
-       "18            30             74         5  1005\n",
-       "19            25             35         0  1007\n",
-       "20            25             40         6  1009"
+       "      staffed_beds  licensed_beds  icu_beds\n",
+       "FIPS                                       \n",
+       "1001            55             85         6\n",
+       "1003           362            410        44\n",
+       "1005            30             74         5\n",
+       "1007            25             35         0\n",
+       "1009            25             40         6"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -201,39 +215,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>FIPS</th>\n",
        "      <th>hospitals</th>\n",
        "      <th>icu_beds</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FIPS</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001</td>\n",
+       "      <th>1001</th>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1003</td>\n",
+       "      <th>1003</th>\n",
        "      <td>3</td>\n",
        "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1005</td>\n",
+       "      <th>1005</th>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1007</td>\n",
+       "      <th>1007</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1009</td>\n",
+       "      <th>1009</th>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
@@ -242,15 +255,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   FIPS  hospitals  icu_beds\n",
-       "0  1001          1         6\n",
-       "1  1003          3        51\n",
-       "2  1005          1         5\n",
-       "3  1007          1         0\n",
-       "4  1009          1         6"
+       "      hospitals  icu_beds\n",
+       "FIPS                     \n",
+       "1001          1         6\n",
+       "1003          3        51\n",
+       "1005          1         5\n",
+       "1007          1         0\n",
+       "1009          1         6"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -285,18 +299,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>FIPS</th>\n",
        "      <th>hospitals</th>\n",
        "      <th>staffed_beds</th>\n",
        "      <th>licensed_beds</th>\n",
        "      <th>icu_beds_Pre</th>\n",
        "      <th>icu_beds_Post</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FIPS</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001</td>\n",
+       "      <th>1001</th>\n",
        "      <td>1</td>\n",
        "      <td>55.0</td>\n",
        "      <td>85.0</td>\n",
@@ -304,8 +324,7 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1003</td>\n",
+       "      <th>1003</th>\n",
        "      <td>3</td>\n",
        "      <td>362.0</td>\n",
        "      <td>410.0</td>\n",
@@ -313,8 +332,7 @@
        "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1005</td>\n",
+       "      <th>1005</th>\n",
        "      <td>1</td>\n",
        "      <td>30.0</td>\n",
        "      <td>74.0</td>\n",
@@ -322,8 +340,7 @@
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1007</td>\n",
+       "      <th>1007</th>\n",
        "      <td>1</td>\n",
        "      <td>25.0</td>\n",
        "      <td>35.0</td>\n",
@@ -331,8 +348,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1009</td>\n",
+       "      <th>1009</th>\n",
        "      <td>1</td>\n",
        "      <td>25.0</td>\n",
        "      <td>40.0</td>\n",
@@ -344,15 +360,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   FIPS  hospitals  staffed_beds  licensed_beds  icu_beds_Pre  icu_beds_Post\n",
-       "0  1001          1          55.0           85.0           6.0              6\n",
-       "1  1003          3         362.0          410.0          44.0             51\n",
-       "2  1005          1          30.0           74.0           5.0              5\n",
-       "3  1007          1          25.0           35.0           0.0              0\n",
-       "4  1009          1          25.0           40.0           6.0              6"
+       "      hospitals  staffed_beds  licensed_beds  icu_beds_Pre  icu_beds_Post\n",
+       "FIPS                                                                     \n",
+       "1001          1          55.0           85.0           6.0              6\n",
+       "1003          3         362.0          410.0          44.0             51\n",
+       "1005          1          30.0           74.0           5.0              5\n",
+       "1007          1          25.0           35.0           0.0              0\n",
+       "1009          1          25.0           40.0           6.0              6"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
